# apocalypto-env

./: .gitignore  Dockerfile  README.md  __init__.py  client.py  error.txt  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  reset_check.txt  step_payload.json  step_payload_direct.json  step_payload_valid.json  tracked_files.txt  verify_final.txt
server/: __init__.py  app.py  constants.py  dataset.py  environment.py  logger.py  scammer_sim.py  tasks.py
tests/: test_api.py  test_environment.py  test_scammer.py  test_tasks.py
